# arbiter

./: .gitignore  .railwayignore  README.md  START_BOT.bat  pyproject.toml  railway.toml  requirements.txt  runbook.md  vercel.json
.github/workflows/: ci.yml  flash-scan.yml  paper-scan.yml
api/: flash_server.py  server.py
backtest/: engine.py  metrics.py  montecarlo.py  run.py  walkforward.py
config/: .env.example  settings.yaml
core/: config.py
core/data/: clob_client.py  exporter.py  models.py
core/edge/: scanner.py
core/execution/: base.py  sim.py
core/flash_arb/: __init__.py  abis.py  calculator.py  config.py  executor.py  monitor.py  price_feed.py
dashboard/: alerts.py  report.py
dashboard-web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard-web/public/data/: backtest.json  equity.json  stats.json
dashboard-web/src/: middleware.ts
dashboard-web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard-web/src/components/: ActionPanel.tsx  EquityChart.tsx  MetricCard.tsx  OpportunitiesFeed.tsx  (+3 more)
flash-arb/: .env.example  hardhat.config.js  package.json
flash-arb/contracts/: FlashArbitrage.sol
flash-arb/scripts/: deploy.js  encode-path.js
flash-arb/test/: FlashArbitrage.test.js
live/: executor.py  loop.py
paper/: journal.py  loop.py  snapshot_collector.py
prompts/: 00_MASTER_BUILD_PROMPT.md  01_EDGE_HYPOTHESIS.md  02_MODAL_20_USD_REALITA.md
scripts/: backtest_mock.py  export_dashboard_data.py  paper-scan.mjs  run_bot.ps1
tests/: test_backtest.py  test_config.py  test_execution.py
(+27 files in other folders)
