[project]
name = "atlas-poly"
version = "0.0.1"
description = "Polymarket quant bot — proses dulu, profit belakangan. Default mode: PAPER."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
